<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Suas Viagens</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticao">Usuário ou senha inválidos!</string>
    <string name="title_activity_dashboard">Menu</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="remover_viagem">Remover Viagem</string>
    <string name="remover_gasto">Remover Gasto</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="title_activity_viagem">Viagem</string>
    <string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negocios</string>
    <string name="data_da_chegada">Data da Chegada</string>
    <string name="data_da_saida">Data da Saida</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de Pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="title_activity_gasto">Gasto</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei</string>
    <string name="categoria">Categoria</string>
    <string name="sair">Sair</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="opcoes">Opções</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmacao_exclusao_viagem">Deseja realmente REMOVER a viagem?</string>
    <string name="preferencias">Preferências</string>
    <string name="modo_viagem_sumario">Determina a viagem ativa com base na data atual</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="informe_valor_limite">Informe o  valor limite(em %)</string>
    <string name="valor_limite_sumario">Notifica quando os gastos ultrapassarem o percentual informado</string>
    <string name="valor_limite">Valor Limite</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="registro_salvo">Registro Salvo</string>
    <string name="erro_salvar">Erro Salvar</string>
    <string name="erro_selecionar_viagem">Erro ao selecionar viagem</string>
    <string name="alimentacao">Aliment.</string>
    <string name="combustivel">Combust.</string>
    <string name="title_activity_viagem_list">Lista de Viagens</string>
    <string name="title_activity_gasto_list">Lista de Gastos</string>
    <string name="title_activity_configuracoes">Configuracoes</string>
    <string name="title_activity_suas_viagens">SuasViagens</string>

</resources>
