<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcinza" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2" >

        <LinearLayout
            android:layout_height="35dp"
            android:background="@drawable/bannerverde"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nova_viagem"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView android:text="@string/destino" />

        <EditText
            android:id="@+id/destino"
            android:inputType="text" >
        </EditText>

        <TextView android:text="@string/tipo_da_viagem" />

        <RadioGroup
            android:id="@+id/tipoViagem"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/lazer"
                android:checked="true"
                android:text="@string/lazer" />

            <RadioButton
                android:id="@+id/negocios"
                android:layout_marginLeft="30dp"
                android:text="@string/negocios" />
        </RadioGroup>

        <TextView
                android:layout_gravity="center"
                android:text="@string/data_da_chegada" />
        
        <EditText
                android:id="@+id/dataChegada"
                android:inputType="number" />
        
        <TextView
                android:layout_gravity="center"
                android:text="@string/data_da_saida" />
        
            <EditText
                android:id="@+id/dataSaida"
                android:inputType="number"
                 />
  
        <TextView android:text="@string/orcamento" />

        <EditText
            android:id="@+id/orcamento"
            android:inputType="numberDecimal" />

        <Button
            android:background="@drawable/botaofundo"
            android:onClick="salvarViagem"
            android:text="@string/salvar" />

    </TableLayout>

</ScrollView>